--- a/src/css/memory_match.css
+++ b/src/css/memory_match.css
@@ -5,6 +5,7 @@
     --island-bg-color: #918989;
     --island-border-color: #E4E4E4;
     --sub-bg-color: #D9D9D9;
+    --sub-bg-color-selected: #bcbcbc;
     --text-color-primary: white;
     --text-color-secondary: #E7E7E7;
     --border-radius-desktop: 0.5rem;
@@ -38,7 +39,7 @@ main {
 }
 
 .island {
-    background-color: var(--island-bg-color);
+    background: var(--island-bg-color);
     border: 2px solid var(--island-border-color);
     border-radius: var(--border-radius-desktop);
 }
@@ -61,13 +62,13 @@ table td {
 }
 
 table thead tr {
-    background-color: #7a7a7a;
+    background: #7a7a7a;
     color: #ffffff;
     text-align: center;
 }
 
 table tbody tr:nth-child(even) {
-    background-color: #f6f6f6;
+    background: #f6f6f6;
 }
 
 #game-title {
@@ -154,17 +155,24 @@ table tbody tr:nth-child(even) {
     visibility: hidden;
 }
 
+.flipped {
+    background: var(--sub-bg-color-selected);
+}
+
 .flipped .card-face {
     visibility: visible;
 }
 
+.matched {
+    border: 4px solid #5dc86d;
+}
+
 .matched .card-face {
     visibility: visible;
-    user-select: none;
 }
 
 .wrong {
-    border: 2px solid red;
+    border: 4px solid #d15151;
 }
 
 #scores-table {
