--- a/src/css/memory_match.css
+++ b/src/css/memory_match.css
@@ -5,7 +5,7 @@
     --island-bg-color: #918989;
     --island-border-color: #E4E4E4;
     --sub-bg-color: #D9D9D9;
-    --sub-bg-color-selected: #bcbcbc;
+    --sub-bg-color-selected: #c5c5c5;
     --text-color-primary: white;
     --text-color-secondary: #E7E7E7;
     --border-radius-desktop: 0.5rem;
