--- a/src/css/memory_match.css
+++ b/src/css/memory_match.css
@@ -8,8 +8,8 @@
     --sub-bg-color-selected: #c5c5c5;
     --text-color-primary: white;
     --text-color-secondary: #E7E7E7;
-    --border-radius-desktop: 0.5rem;
-    --border-radius-mobile: 0.25rem;
+    --border-radius-desktop: 0.75rem;
+    --border-radius-mobile: 0.5rem;
 }
 
 h1, h2, h3 {
@@ -83,13 +83,38 @@ table tbody tr:nth-child(even) {
 
 #status-panel {
     color: white;
-    /*max-width: 20rem;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
     padding: 1rem;
+    min-width: 15rem;
     height: max-content;
+}
+
+#statuses {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+}
+
+#statuses div {
+    width: 100%;
+    border-radius: var(--border-radius-desktop);
+    padding: 1rem;
+    font-weight: bold;
+    color: var(--island-bg-color);
+    background: var(--sub-bg-color);
+}
+
+#statuses div p {
+    font-size: 1.5rem;
+}
+
+#statuses div span {
+    font-size: 2.5rem;
 }
 
 #status-panel button {
@@ -134,8 +159,6 @@ table tbody tr:nth-child(even) {
     grid-template-rows: repeat(6, 1fr);
 }
 
-/* Card Styles */
-
 .card {
     background: var(--sub-bg-color);
     display: flex;
@@ -151,7 +174,7 @@ table tbody tr:nth-child(even) {
 }
 
 .card-face {
-    font-size: 2rem;
+    font-size: 3rem;
     visibility: hidden;
 }
 
@@ -165,6 +188,7 @@ table tbody tr:nth-child(even) {
 
 .matched {
     border: 4px solid #5dc86d;
+    background: #72ed85;
 }
 
 .matched .card-face {
@@ -173,6 +197,7 @@ table tbody tr:nth-child(even) {
 
 .wrong {
     border: 4px solid #d15151;
+    background: #f16666;
 }
 
 #scores-table {
@@ -184,16 +209,34 @@ table tbody tr:nth-child(even) {
         padding-inline: 1rem;
     }
 
+    #statuses {
+        flex-direction: row;
+    }
+
+    #statuses div {
+        border-radius: 0;
+    }
+
+    #statuses div:first-child {
+        border-top-left-radius: var(--border-radius-mobile);
+        border-bottom-left-radius: var(--border-radius-mobile);
+    }
+
+    #statuses div:last-child {
+        border-top-right-radius: var(--border-radius-mobile);
+        border-bottom-right-radius: var(--border-radius-mobile);
+    }
+
+    #status-panel button {
+        border-radius: var(--border-radius-mobile);
+    }
+
     #game-area {
         flex-direction: column;
     }
 
-    /*#board {*/
-    /*    aspect-ratio: 1/1;*/
-    /*    min-height: auto;*/
-    /*}*/
-
     .island {
+        border-radius: var(--border-radius-mobile);
         width: 100%;
     }
 }
