--- a/src/css/memory_match.css
+++ b/src/css/memory_match.css
@@ -18,17 +18,17 @@ h1, h2, h3 {
 
 h1 {
     font-size: 3rem;
-    line-height: 5rem;
+    line-height: 3rem;
 }
 
 h2 {
     font-size: 2rem;
-    line-height: 4rem;
+    line-height: 2.25rem;
 }
 
 h3 {
     font-size: 1.5rem;
-    line-height: 3rem;
+    line-height: 1rem;
 }
 
 main {
@@ -73,7 +73,7 @@ table tbody tr:nth-child(even) {
 }
 
 #game-title {
-    padding: 1.5rem;
+    padding: 1rem;
 }
 
 #game-area {
@@ -90,7 +90,10 @@ table tbody tr:nth-child(even) {
     gap: 0.5rem;
     padding: 1rem;
     min-width: 15rem;
-    height: max-content;
+}
+
+#status-panel h2 {
+    font-size: clamp(1.25rem, 2vw + 0.5rem, 2.5rem);
 }
 
 #statuses {
@@ -104,14 +107,14 @@ table tbody tr:nth-child(even) {
 #statuses div {
     width: 100%;
     border-radius: var(--border-radius-desktop);
-    padding: 0.5rem;
+    padding: 0.25rem;
     font-weight: bold;
     color: var(--island-bg-color);
     background: var(--sub-bg-color);
 }
 
 #statuses div p {
-    font-size: clamp(0.5rem, 1.5vw + 0.5rem, 1.75rem);
+    font-size: clamp(0.5rem, 1.25vw + 0.5rem, 1.5rem);
 }
 
 #statuses div span {
