--- a/src/css/memory_match.css
+++ b/src/css/memory_match.css
@@ -58,22 +58,32 @@ main {
 }
 
 table {
+    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
     border-collapse: collapse;
     border-spacing: 50px;
 }
 
-table td {
-    padding-right: 2rem;
-}
-
 table thead tr {
-    background: #7a7a7a;
+    outline: none;
     color: #ffffff;
     text-align: center;
 }
 
-table tbody tr:nth-child(even) {
+table thead tr * {
+    color: var(--text-color-primary);
+}
+
+#scores-body tr:nth-child(even) {
     background: #f6f6f6;
+}
+
+#scores-body tr:nth-child(odd) {
+    background: #ededed;
+}
+
+#scores-body tr td {
+    padding: 0.5rem;
+    text-align: center;
 }
 
 #game-title {
@@ -168,8 +178,10 @@ table tbody tr:nth-child(even) {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    user-select: none;
+
+    /*    fix for css auto margin  */
     margin: 0 !important;
-    /*    fix later bulma css auto margin  */
 }
 
 .card:hover {
@@ -201,10 +213,6 @@ table tbody tr:nth-child(even) {
 .wrong {
     border: 4px solid #d15151;
     background: #f16666;
-}
-
-#scores-table {
-    border: black solid 1px;
 }
 
 #message {
@@ -256,7 +264,24 @@ table tbody tr:nth-child(even) {
 }
 
 #btn-save-score.disabled {
-    background: linear-gradient(to bottom, #66dded, #56c8d8);
+    background: #bfbfbf;
+    border-color: #7a7a7a;
+}
+
+.navbar {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background: var(--sub-bg-color);
+    margin-bottom: 1rem;
+}
+
+.navbar h2 {
+    padding: 1rem;
+}
+
+.navbar-burger {
+    color: var(--island-bg-color);
 }
 
 @media (max-width: 769px) {
@@ -294,20 +319,4 @@ table tbody tr:nth-child(even) {
         border-radius: var(--border-radius-mobile);
         width: 100%;
     }
-}
-
-.navbar {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background: var(--sub-bg-color);
-    margin-bottom: 1rem;
-}
-
-.navbar h2 {
-    padding: 1rem;
-}
-
-.navbar-burger {
-    color: var(--island-bg-color);
 }
